--- a/estilowebcss.css
+++ b/estilowebcss.css
@@ -91,19 +91,27 @@ text-align: center;
 }
 
 /* Esto es relacionado con las imágenes */
-.gallery {
+.gallery_v2 {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
     gap: 20px;
     margin-top: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
 }
   
-.gallery img {
+.gallery_v2 img {
     width: 100%;
     height: auto;
     object-fit: cover;
+    opacity: 0;
+    transition: opacity 0.5s;
+    max-width: 100%;
+    height: auto;
   }
   
+
 .center { 
     text-align: center;
 }
@@ -126,3 +134,15 @@ margin-top: 30px;
 .planeador2 {
     margin-top: 15px;
     }
+
+.gallery img {
+        width: 100%;
+        height: auto;
+        object-fit: cover;
+}
+
+.gallery {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    gap: 20px;
+}
